# avalanche-hackathon

./: README.md  repo-init.md
.github/workflows/: test.yml
glitch/2023/: 1-connect-to-local-devnet-and-fund-the-wallet.eng.md  1-connect-to-local-devnet-and-fund-the-wallet.kor.md  2-connect-to-glitch-devnet-and-fund-the-wallet.eng.md  3-test-simple-smart-contract.eng.md  4-test-gasless-transaction.eng.md  4-test-gasless-transaction.kor.md  README.md  connect-to-glitch-devnet-and-fund-the-wallet.eng.md  connect-to-glitch-devnet-and-fund-the-wallet.kor.md  connect-to-local-devnet-and-fund-the-wallet.eng.md  test-simple-smart-contract.eng.md
glitch/2023/docs/: 1-connect-to-local-devnet-and-fund-the-wallet.eng.md  2-connect-to-glitch-devnet-and-fund-the-wallet.eng.md  3-test-simple-smart-contract.eng.md  4-test-gasless-transaction.eng.md
glitch/2023/gasless-counter-increment/: Cargo.toml  README.md
glitch/2023/gasless-counter-increment/src/: main.rs
